--- a/src/styles.css
+++ b/src/styles.css
@@ -95,12 +95,12 @@ h6 {
   --border-muted: oklch(0.3 0 274);
   --primary: oklch(0.76 0.1 274);
   --secondary: oklch(0.76 0.1 94);
-  --danger: oklch(0.7 0.05 30);
-  --warning: oklch(0.7 0.05 100);
-  --success: oklch(0.7 0.05 160);
-  --info: oklch(0.7 0.05 260);
+  --danger: oklch(63.932% 0.18474 32.073);
+  --warning: oklch(92.826% 0.18202 102.607);
+  --success: oklch(66.475% 0.15351 153.883);
+  --info: oklch(67.881% 0.13757 260.478);
   --hover-highlight: oklch(0% 0 0);
-
+  --blue-border: oklch(63.042% 0.16069 251.222);
   font-size: 10px;
   font-family:
     Arial,
@@ -147,6 +147,7 @@ body {
   padding: 1rem 2rem;
   gap: 2rem;
   background-color: var(--bg-dark);
+  font-size: clamp(1.2rem, 2.7dvw, 1.7rem);
 }
 
 header {
@@ -157,6 +158,7 @@ header {
   padding: 1rem 0rem;
   color: var(--text);
   font-size: clamp(1.2rem, 3.5dvw, 2.3rem);
+  font-family: "Orbitron";
 
   > button {
     position: absolute;
@@ -211,6 +213,7 @@ footer {
 
   button.button:hover {
     transform: scale(1.1);
+    background-color: var(--bg-light);
   }
 
   button.button svg path {
@@ -218,27 +221,7 @@ footer {
   }
 }
 
-.display-container {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  color: var(--text);
-  align-items: center;
-  background-color: var(--bg);
-  padding: 1rem 2rem;
-  border-radius: 15px;
-
-  h1.projects-page-title {
-    font-family: "Orbitron";
-    font-size: clamp(2rem, 4.5dvw, 3.3rem);
-  }
-
-  .projects-container {
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  }
-}
+/* GENERAL CSS SELECTORS */
 
 .title {
   font-size: clamp(1.5rem, 3.5dvw, 2.3rem);
@@ -251,6 +234,7 @@ footer {
   display: grid;
   place-items: center;
   gap: 2rem;
+  box-shadow: 2px 0px 5px var(--blue-border);
 }
 
 .image {
@@ -260,12 +244,13 @@ footer {
 .btn-container {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   gap: 2rem;
 }
 
 .button {
-  color: var(--text-muted);
+  color: var(--text);
   background-color: var(--bg);
   border: none;
   border-top: var(--highlight) 1px solid;
@@ -273,11 +258,64 @@ footer {
   border-radius: 5px;
   box-shadow: 2px 3px 5px var(--bg-dark);
   cursor: pointer;
-  transition: transform ease-in-out 0.3s;
+  transition:
+    transform ease-in-out 0.3s,
+    background-color ease-in-out 0.3s;
 }
 
 .button:hover {
   transform: scale(1.05);
   background-color: var(--highlight);
   color: var(--hover-highlight);
+}
+
+/* SPECIFIC CSS SELECTORS */
+
+.project-image {
+  height: 250px;
+}
+
+.display-container {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  color: var(--text);
+  align-items: center;
+  background-color: var(--bg);
+  padding: 1rem 2rem;
+  border-radius: 15px;
+
+  h1.projects-page-title {
+    font-family: "Orbitron";
+    font-size: clamp(2rem, 4.5dvw, 3.3rem);
+  }
+
+  .projects-container {
+    width: 100%;
+    display: grid;
+    gap: 4rem;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 400px));
+    justify-content: center;
+  }
+}
+
+.add-new-project-btn {
+  place-self: center;
+  padding: 1rem 1.8rem;
+  width: fit-content;
+  background-color: var(--success);
+  border-radius: 100px;
+}
+
+.view-project-btn {
+  grid-area: 1/1/2/-1;
+  background-color: var(--success);
+}
+
+button.edit-project-btn {
+  background-color: var(--info);
+}
+
+button.delete-project-btn {
+  background-color: var(--danger);
 }
