--- a/src/styles.css
+++ b/src/styles.css
@@ -396,10 +396,14 @@ div.todo-card {
   flex-direction: column;
   align-items: start;
   color: var(--text-muted);
+  transition:
+    background-color ease-in-out 0.6s,
+    border ease-in-out 0.6s;
   > .title {
     align-self: center;
     color: var(--text);
     font-weight: 500;
+    transition: text-decoration ease-in-out 0.6s;
   }
 
   > label {
@@ -706,8 +710,19 @@ form.edit-todo-form {
   }
 }
 
-.alert-div {
+.warning {
   background-color: var(--danger);
+}
+
+.success {
+  background-color: var(--success);
+}
+
+.info {
+  background-color: var(--info);
+}
+
+.alert-div {
   padding: 1rem;
   border-radius: 15px;
   color: var(--text);
@@ -739,6 +754,58 @@ form.edit-todo-form {
   }
 }
 
+.todo-done-state-toggler {
+  display: none;
+}
+
+label.todo-done-state-label {
+  display: flex;
+  align-items: center;
+}
+
+.slider {
+  width: 60px;
+  height: 30px;
+  background-color: var(--bg);
+  border-radius: 20px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  /* border: 4px solid transparent; */
+  transition: 0.3s;
+  box-shadow: 0 0 10px 0 rgb(0, 0, 0, 0.25) inset;
+  cursor: pointer;
+}
+
+.slider::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  transform: translateX(-30px);
+  border-radius: 20px;
+  transition: 0.3s;
+  box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
+}
+
+.todo-done-state-toggler:checked ~ .slider::before {
+  transform: translateX(30px);
+  box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
+}
+
+.todo-done-state-toggler:checked ~ .slider {
+  background-color: #2bda2b;
+}
+
+.todo-done-state-toggler:active ~ .slider::before {
+  transform: translate(0);
+}
+
+p.new-project-para {
+  min-width: 100%;
+}
+
 @media (max-width: 950px) {
   div.content > div.selected-project-layout-div {
     display: flex;
@@ -751,10 +818,11 @@ form.edit-todo-form {
 
   div.alert-div {
     display: grid;
+    min-width: 85%;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
-    transform: none;
-    left: 1rem;
+    left: 50%;
+    transform: translate(-50%, 0);
     gap: 1rem;
 
     > .alert-text {
